@@ -1,3 +1,6 @@
+2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
+  * Revert MultiByteToWideChar() for Windows patch.
+
 2011-08-05  6.7.1-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.1-3.
 
